--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,5 @@
-
+{% extends 'base.html' %}
+{% block body %}
 
         <!--=====================================
                     BANNER PART START
@@ -980,7 +981,7 @@
     </body>
 </html>
 
-
+{% endblock body %}
 
 
 
