--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,13 @@
         <link rel="stylesheet" href="{% static 'ltr/vendor/bootstrap/bootstrap.min.css' %}">
 
         <!-- CUSTOM -->
-        <link rel="stylesheet" href="{% static 'ltr/css/main.css'%}">
+        <link rel="stylesheet" href="{% static 'ltr/css/main.css'%}"> 
+
+        {% block css  %}
         <link rel="stylesheet" href="{% static 'ltr/css/index.css'%}">
-        <link rel="stylesheet" href="{% static 'ltr/css/product-details.css'%}">
+        {% endblock css %}
+        
+    
         <!--=====================================
                     CSS LINK PART END
         =======================================-->
