--- a/products/templates/products/brand_list.html
+++ b/products/templates/products/brand_list.html
@@ -1,12 +1,17 @@
-{% extends 'base.html'  %}
+{% extends 'base.html' %}
+
 {% load static %}
 
-
 {% block css %}
-    <link rel="stylesheet" href="{% static 'ltr/css/brand-list.css' %}">
+    <link rel="stylesheet" href="{% static 'ltr/css/brand-list.css'%}">
 {% endblock css %}
 
 {% block body %}
+
+
+
+
+
         <!--=====================================
                     BANNER PART START
         =======================================-->
@@ -55,68 +60,57 @@
                     </div>
                 </div>
                 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 isotope-items">
-                    {% for object  in brand_list  %}
-                    <div class="col all vegetables">
+                    {% for object in brand_list %}
+                         <div class="col all vegetables">
                         <div class="brand-wrap">
                             <div class="brand-media">
                                 <img src="{{object.image.url}}" alt="brand">
                                 <div class="brand-overlay">
-                                    <a href="/products/brand/{{object.slug}}"><i class="fas fa-link"></i></a>
+                                    <a href="/products/brand/{}"><i class="fas fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="brand-meta">
                                 <h4>{{object}}</h4>
-                                <p>({{object.posts_count}} items)</p>
+                                <p>(45 items)</p>
                             </div>
                         </div>
-                    </div>
-                    
+                      </div>
                     {% endfor %}
-                    
-
                 </div>
-                {% if is_paginated %}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="bottom-paginate">
                             <p class="page-info">Showing 12 of 60 Results</p>
                             <ul class="pagination">
-                                {% if page_obj.has_previous %}
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page={{page_obj.previous_page_number}}">
-                                            <i class="fas fa-long-arrow-alt-left"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
-
-                                {% for i in paginator.page_range  %}
-                                    {% if page_obj.number == i  %}
-                                        <li class="page-item"><a class="page-link active" href="#">{{i}}</a></li>
-
-                                    {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}
-                                        <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                                    {% endif %}
-                                    
-                                    
-                                {% endfor %}
-                                
-                                {% if page_obj.has_next %}
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page={{page_obj.next_page_number}}">
-                                            <i class="fas fa-long-arrow-alt-right"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-long-arrow-alt-left"></i>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link active" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">...</li>
+                                <li class="page-item"><a class="page-link" href="#">60</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-long-arrow-alt-right"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                {% endif %}
             </div>
         </section>
         <!--=====================================
                     BRAND LIST PART END
         =======================================-->
+         {% endblock body %}
 
-        {% endblock body %}
-    
+
+
+
+
+
+
