--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,6 +1,8 @@
-{% extends 'base.html'  %}
-
+{% extends 'base.html' %}
 {% block body %}
+        <!--=====================================
+                    PRODUCT VIEW END
+        =======================================-->
 
 
         <!--=====================================
@@ -55,7 +57,7 @@
                 </div>
                 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5">
                     {% for product in object_list %}
-                    <div class="col">
+                        <div class="col">         
                         <div class="product-card">
                             <div class="product-media">
                                 <div class="product-label">
@@ -69,25 +71,25 @@
                                 </a>
                                 <div class="product-widget">
                                     <a title="Product Compare" href="compare.html" class="fas fa-random"></a>
-                                    <a title="Product Video" href="{{product.video}}" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
+                                    <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
                                     <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
                                 </div>
                             </div>
                             <div class="product-content">
                                 <div class="product-rating">
-                                    <i class="icofont-star {% if product.get_avg_rate.avg > 0 %} active {% endif %}"></i>
-                                    <i class="icofont-star {% if product.get_avg_rate.avg > 1 %} active {% endif %}"></i>
-                                    <i class="icofont-star {% if product.get_avg_rate.avg > 2 %} active {% endif %}"></i>
-                                    <i class="icofont-star {% if product.get_avg_rate.avg > 3 %} active {% endif %}"></i>
-                                    <i class="icofont-star {% if product.get_avg_rate.avg > 4 %} active {% endif %}"></i>
-                                    <a href="product-video.html">({{product.product_review.all|length}})</a>
+                                    <i class="active icofont-star"></i>
+                                    <i class="active icofont-star"></i>
+                                    <i class="active icofont-star"></i>
+                                    <i class="active icofont-star"></i>
+                                    <i class="icofont-star"></i>
+                                    <a href="product-video.html">(3)</a>
                                 </div>
                                 <h6 class="product-name">
-                                    <a href="{% url 'products:product_detail' product.slug %}">{{product}}</a>
+                                    <a href="{% url 'product:product_detail' product.slug %}">{{product}}</a>
                                 </h6>
                                 <h6 class="product-price">
-                                    
-                                    <span>${{product.price}}<small>/piece</small></span>
+                                    <del></del>
+                                    <span>${{product.price}}<small></small></span>
                                 </h6>
                                 <button class="product-add" title="Add to Cart">
                                     <i class="fas fa-shopping-basket"></i>
@@ -100,47 +102,34 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        </div>
                     {% endfor %}
+
                 </div>
-                {% if is_paginated %}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="bottom-paginate">
                             <p class="page-info">Showing 12 of 60 Results</p>
                             <ul class="pagination">
-                                {% if page_obj.has_previous %}
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page={{page_obj.previous_page_number}}">
-                                            <i class="fas fa-long-arrow-alt-left"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
-
-                                {% for i in paginator.page_range  %}
-                                    {% if page_obj.number == i  %}
-                                        <li class="page-item"><a class="page-link active" href="#">{{i}}</a></li>
-
-                                    {% elif i > page_obj.number|add:'-4' and i < page_obj.number|add:'4' %}
-                                        <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
-                                    {% endif %}
-                                    
-                                    
-                                {% endfor %}
-                                
-                                {% if page_obj.has_next %}
-                                    <li class="page-item">
-                                        <a class="page-link" href="?page={{page_obj.next_page_number}}">
-                                            <i class="fas fa-long-arrow-alt-right"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-long-arrow-alt-left"></i>
+                                    </a>
+                                </li>
+                                <li class="page-item"><a class="page-link active" href="#">1</a></li>
+                                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                <li class="page-item">...</li>
+                                <li class="page-item"><a class="page-link" href="#">60</a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="#">
+                                        <i class="fas fa-long-arrow-alt-right"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                {% endif %}
-
             </div>
         </section>
         <!--=====================================
@@ -148,4 +137,7 @@
         =======================================-->
         
 
-        {% endblock body %}
+        <!--=====================================
+                    NEWSLETTER PART START
+        =======================================-->
+ {% endblock body %}
