--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -56,6 +56,7 @@
                     </div>
                 </div>
                 <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 row-cols-xl-5">
+
                     {% for product in object_list %}
                         <div class="col">         
                         <div class="product-card">
@@ -106,30 +107,44 @@
                     {% endfor %}
 
                 </div>
+            {% if is_paginated %}
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="bottom-paginate">
                             <p class="page-info">Showing 12 of 60 Results</p>
                             <ul class="pagination">
+
+                         {% if page_obj.has_previous %}
                                 <li class="page-item">
-                                    <a class="page-link" href="#">
+                                    <a class="page-link" href="?page={{page_obj.previous_page_number}}">
                                         <i class="fas fa-long-arrow-alt-left"></i>
                                     </a>
                                 </li>
-                                <li class="page-item"><a class="page-link active" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">...</li>
-                                <li class="page-item"><a class="page-link" href="#">60</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">
+                         {% endif %}
+                                
+                                {% for i in paginator.page_range  %}
+                                    {% if page_obj.number == i %}
+                                        <li class="page-item"><a class="page-link active" href="#">{{i}}</a></li>
+
+                                    {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %}
+                                        <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                                    {% endif %}
+                                     
+                                {% endfor %}
+                                
+                                {% if page_obj.has_previous %}
+                                    <li class="page-item">
+                                    <a class="page-link" href="?page={{page_obj.next_page_number}}">
                                         <i class="fas fa-long-arrow-alt-right"></i>
                                     </a>
-                                </li>
+                                    </li>
+                                {% endif %}
+
                             </ul>
                         </div>
                     </div>
                 </div>
+                {% endif %}
             </div>
         </section>
         <!--=====================================
