--- a/templates/base.html
+++ b/templates/base.html
@@ -155,8 +155,8 @@
                     <div class="col-lg-12">
                         <div class="navbar-content">
                             <ul class="navbar-list">
-                                <li class="navbar-item dropdown">
-                                    <a class="navbar-link dropdown-arrow" href="/">home</a>
+                                <li class="navbar-item ">
+                                    <a class="navbar-link" href="/">home</a>
                                 </li>
                                 <li class="navbar-item">
                                     <a class="navbar-link" href="/products">shop</a>
